<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewModel.InfoFragment">

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/BlueSec"
        app:cardCornerRadius="25dp"
        app:cardElevation="6dp"
        app:contentPadding="4dp"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inf_tittle"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_desc"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"
                android:textSize="18dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_dev"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_date_1"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="18dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_date_2"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="18dp"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</FrameLayout>